# AI-spark-analyzer

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: usage.md
src/spark_analyzer/: __init__.py  ai.py  analysis.py  cli.py  fetcher.py  models.py  parser.py  report.py
tests/: _support.py  test_ai.py  test_analysis.py  test_fetcher.py  test_parser.py
tests/fixtures/: sample_sampler.json
