[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-spark-analyzer"
version = "0.1.0"
description = "AI-powered analysis of spark profiler reports to diagnose Minecraft server lag spikes"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AI Spark Analyzer contributors" }]
keywords = ["minecraft", "spark", "profiler", "performance", "lag", "claude", "anthropic"]
# Core has no third-party deps: fetch/parse/analyze use only the standard
# library, and the AI diagnosis can run through the Claude Code CLI (your
# Pro/Max subscription) with nothing extra installed. The Anthropic SDK is
# only needed for the API backend — install it via the "api" extra.
dependencies = []

[project.optional-dependencies]
api = ["anthropic>=0.49.0"]

[project.urls]
Homepage = "https://spark.lucko.me"
"spark docs" = "https://spark.lucko.me/docs/guides/Finding-lag-spikes"

[project.scripts]
spark-analyzer = "spark_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
